--- a/seba_style.css
+++ b/seba_style.css
@@ -85,7 +85,8 @@ a.plain_link:visited, a.plain_link:hover, a.plain_link:active, a.plain_link:link
 .arrow{
   float: right;
   position: fixed;
-  right: 10px;
+  right: 30px;
+  top: 30px;
   z-index: 1;
 
 }
@@ -100,10 +101,11 @@ a.plain_link:visited, a.plain_link:hover, a.plain_link:active, a.plain_link:link
 
 .works{
   position: absolute;
-  right: 10px;
+  right: 30px;
+
 
 
 }
 .slideshow{
-  width: 200px;
+ max-height: 80vh;
 }
