--- a/seba_style.css
+++ b/seba_style.css
@@ -2,56 +2,32 @@
   cursor: url('immagini/cursor.png'), auto;
 }
 
-
 body{
   font-family: 'neue_montreal', Arial, sans-serif;
   font-weight:normal;
   font-style:normal;
-
-}
-
-@media only screen and (max-width: 1024px) {
-  .break_desktop{
-    display: none;
-  }
+  font-size: 17pt;
 }
 
 .break_mobile{
   display: none;
   content: "";
   margin-top: 10px;
-
-}
-
-@media only screen and (max-width: 1024px) {
-  .break_mobile{
-    display: block;
-
-  }
 }
 
 .italic{
   font-weight:normal;
   font-style:italic;
-  }
+}
 
 .main_content{
   margin-left: 0pt;
   position: relative;
-  font-size: 17pt;
-}
-
-@media only screen and (max-width: 1024px) {
-  .main_content{
-    font-size: 12pt;
-  }
 }
 
 .inside_content{
   margin-left: 17pt;
   position: relative;
-  /*border: 5px solid red;*/
-
 }
 
 #first_ph{
@@ -60,26 +36,16 @@ body{
   transform: translate(0,-75%);
 }
 
-
 #second_ph{
   position: relative;
   top: 37vh;
-
   transform: translate(0,-100%);
 }
 
 .contact{
-  font-size: 17pt;
   position: absolute;
   top: 100%;
   transform: translate(0,-110%);
-
-}
-
-@media only screen and (max-width: 1024px) {
-  .contact{
-    font-size: 12pt;
-  }
 }
 
 a.blue_link:visited, a.blue_link:hover, a.blue_link:active, a.blue_link:link{
@@ -95,19 +61,11 @@ a.plain_link:visited, a.plain_link:hover, a.plain_link:active, a.plain_link:link
   text-decoration: none;
 }
 
-@media only screen and (max-width: 1024px) {
-  a.blue_link:visited, a.blue_link:hover, a.blue_link:active, a.blue_link:link{
-    font-weight: bold;
-    font-size: 15pt
-  }
-}
-
 .blue_text{
   color: #0000FF;
   font-size: 8pt;
   position: absolute;
   top: 0;
-
 }
 
 .DL_CV{
@@ -119,19 +77,7 @@ a.plain_link:visited, a.plain_link:hover, a.plain_link:active, a.plain_link:link
   border-width: 2px;
   border-color: #0000FF;
   z-index: 1;
-
 }
-
-@media only screen and (max-width: 1024px) {
-  .DL_CV{
-    font-size: 10pt;
-    margin-top: 45px;
-    border-width: 1px;
-
-  }
-}
-
-
 
 .arrow{
   float: right;
@@ -139,50 +85,21 @@ a.plain_link:visited, a.plain_link:hover, a.plain_link:active, a.plain_link:link
   right: 10px;
   top: 30px;
   z-index: 1;
-
 }
-
-@media only screen and (max-width: 1024px) {
-  .arrow{
-    top: 20px;
-  }
-}
-
 
 .arrow_img{
   width: 30px;
   object-fit: contain;
-
-
-}
-
-
-@media only screen and (max-width: 1024px) {
-  .arrow_img{
-    width: 17px;
-
-
-  }
 }
 
 .works{
   position: absolute;
   right: 10px;
-
-
-
 }
+
 .slideshow{
  max-height: 45vh;
  display: none;
-}
-
-@media only screen and (max-width: 1024px) {
-  .slideshow{
-   max-width: 370px;
-
-
-  }
 }
 
 .works_title{
@@ -195,8 +112,48 @@ a.plain_link:visited, a.plain_link:hover, a.plain_link:active, a.plain_link:link
   transform: translate(0,-100%);
 }
 
+@media only screen and (max-width: 1125px) {
 
-@media only screen and (max-width: 1024px) {
+  body{
+    font-size: 12pt;
+  }
+
+  .break_desktop{
+    display: none;
+  }
+
+  .break_mobile{
+    display: block;
+
+  }
+  .contact{
+    font-size: 12pt;
+  }
+
+  .slideshow{
+   max-width: 370px;
+  }
+
+  a.blue_link:visited, a.blue_link:hover, a.blue_link:active, a.blue_link:link{
+    font-weight: bold;
+    font-size: 15pt
+  }
+
+  .DL_CV{
+    font-size: 10pt;
+    margin-top: 45px;
+    border-width: 1px;
+
+  }
+
+  .arrow{
+    top: 20px;
+  }
+
+  .arrow_img{
+    width: 17px;
+  }
+
   .numero_div{
     position: relative;
     top: 60vh;
