--- a/seba_style.css
+++ b/seba_style.css
@@ -128,7 +128,11 @@ a.plain_link:visited, a.plain_link:hover, a.plain_link:active, a.plain_link:link
 
   .break_mobile{
     display: block;
+  }
 
+  .numero_div{
+    position: absolute;
+    top: 80vh;
   }
 }
 
