--- a/seba_style.css
+++ b/seba_style.css
@@ -116,7 +116,7 @@ a.plain_link:visited, a.plain_link:hover, a.plain_link:active, a.plain_link:link
 }
 
 .works{
-  position: relative;
+  position: absolute;
   top: 12%;
   right: 10px;
 }
