--- a/seba_style.css
+++ b/seba_style.css
@@ -176,6 +176,10 @@ a.plain_link:visited, a.plain_link:hover, a.plain_link:active, a.plain_link:link
   .arrow_img{
     width: 17px;
   }
+
+  .slideshow{
+   max-width: 90vw;
+  }
 }
 
 @media only screen and (max-width: 740px) {
