--- a/seba_style.css
+++ b/seba_style.css
@@ -7,7 +7,7 @@ body{
   font-family: 'neue_montreal', Arial, sans-serif;
   font-weight:normal;
   font-style:normal;
-  font-size: 20pt;
+  font-size: 3vh;
   max-height: 100vh;
   margin: 0;
 }
